attempted to correct viewmywork on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@ a {
   height: 100vh;
   width: 100%;
   display: grid;
-  grid-template-rows: 25% 68% 7%;
 }
 
 .titles {
@@ -166,6 +165,9 @@ h3 {
   .box {
     width: 42%;
   }
+  .header {
+    grid-template-rows: 25% 68% 7%;
+  }
 }
 @media only screen and (max-width: 767px) {
   .boxes {
@@ -176,6 +178,9 @@ h3 {
   }
   .box {
     width: 90%;
+  }
+  .header {
+    grid-template-rows: 25% 55% 20%;
   }
 }
 
